Removed margin from wp-post-image inside the index-grid

--- a/assets/sass/modules/_content.scss
+++ b/assets/sass/modules/_content.scss
@@ -95,6 +95,10 @@
 }
 
 .index-grid {
+	& .wp-post-image {
+		margin:0;
+	}
+
 	@include susy-media($mqs-phone-portrait){
 		@include gallery(12 of 12);
 	}
