Styled footer with border above and centered text with margin

--- a/assets/sass/modules/_footer.scss
+++ b/assets/sass/modules/_footer.scss
@@ -1,3 +1,13 @@
 //--------------------------------------------------------------
 // Footer
 //--------------------------------------------------------------
+
+.site-footer {
+	border-top: 3px solid black;
+}
+
+.credits,
+.site-info {
+	text-align: center;
+	margin: ($gutter * 2) 0;
+}
