--- a/style.css
+++ b/style.css
@@ -1540,6 +1540,18 @@ textarea {
   margin-right: 0;
 }
 
+/* line 5, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_footer.scss */
+.site-footer {
+  border-top: 3px solid black;
+}
+
+/* line 9, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_footer.scss */
+.credits,
+.site-info {
+  text-align: center;
+  margin: 1.5em 0;
+}
+
 /* line 6, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/plugins/_jetpack.scss */
 .infinite-scroll .posts-navigation,
 .infinite-scroll.neverending .site-footer {
